# codex-contributor

./: .env.example  .gitignore  BENCHMARK.md  LICENSE  README.md  demo-candidates.txt  pyproject.toml  requirements.txt
.codex-contributor/demo-candidates/: RANKING.md
.codex-contributor/demo-candidates/flask-6093/: metadata.json  review.md
.codex-contributor/demo-candidates/langchain-38989/: metadata.json  review.md
.codex-contributor/demo-candidates/openai-python-3459/: metadata.json  review.md
.codex-contributor/demo-candidates/openai-python-3516/: metadata.json  review.md
.codex-contributor/demo-candidates/requests-7399/: metadata.json  review.md
backend/: __init__.py  investigation.py
config/: policy.yaml
dashboard/: __init__.py  app.py
docs/: architecture.md  codex_usage.md  devpost.md  submission-checklist.md  video-script.md
examples/: engineering_review_sample.md
prompts/: investigation.txt  issue_comprehension.txt  repository_exploration.txt
src/codex_contributor/: __init__.py  cli.py  engineering_review.py  env.py  github_client.py  investigation.py  issue_parser.py  models.py  pipeline.py  repo_explorer.py  test_runner.py
src/codex_contributor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/codex_contributor/backend/: __init__.py  cache.py  html_export.py  investigation.py  pipeline.py  planner.py  pr.py  validation.py  writer.py
tests/: test_batch3.py  test_cli.py  test_export_review.py  test_github_publish.py  test_investigation.py  test_issue_parser.py  test_pipeline.py  test_repo_explorer.py
(+1 files in other folders)
