[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-contributor"
version = "0.1.0"
description = "Investigate GitHub issues before writing code."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = ["python-dotenv>=1.0"]

[project.optional-dependencies]
ai = ["openai>=2.45.0,<3"]
policy = ["PyYAML>=6.0.2"]
dev = ["pytest>=8.3", "pytest-cov>=6.0"]
dashboard = ["streamlit>=1.42"]

[project.scripts]
codex-contributor = "codex_contributor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
